<resources>
    <string name="app_name">LivLyf</string>
    <string name="grown_by">Grown by</string>
    <string name="aps_innovations">APS Innovations</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="signup">SignUp</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="not_registered_yet">Not Registered Yet ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plants">Plants</string>
    <string name="pots">Pots</string>
    <string name="seeds">Seeds</string>
    <string name="pebbles">Pebbles</string>
    <string name="home">Home</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="myprofile">MyProfile</string>
    <string name="logout">Logout</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="my_orders">My Orders</string>
    <string name="tools">Tools</string>
    <string name="decor">Decor</string>
    <string name="mycart">myCart</string>
    <string name="wishlist">Wishlist</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="buy_now">Buy Now</string>
    <string name="_0">0</string>
    <string name="qty">Qty:</string>
    <string name="livlyf_assured">LivLyf Assured</string>
    <string name="name">Name</string>
    <string name="added">Added</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="shipping">Shipping:</string>
    <string name="no_wishlist_items">No WishList Items!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="no_orders_yet">No Orders Yet!</string>
    <string name="status">Status</string>
    <string name="items">Items</string>
    <string name="pending">Pending</string>
    <string name="mmm_dd_yyyy_hh_mm">MMM dd yyyy hh:mm</string>
    <string name="amount">Amount</string>
    <string name="ordered_at">Ordered At</string>
    <string name="order_id">Order ID</string>
    <string name="_00000000000000">#00000000000000</string>
    <string name="cancel">Cancel</string>
    <string name="no_products_found">No Products Found!</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="address">Address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="contact_details">Contact Details (+91)</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="payment_mode_cod">Payment Mode : COD</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="this_is_an_ecommerce_app_n_for_getting_everything_you_need_n_for_your_garden">This is an eCommerce App \n for getting everything you need \n for your garden!</string>
    <string name="here_you_will_find_every_item_n_from_seeds_to_tress_n_from_tools_to_decor_n_from_pots_to_pebbles">Here you will find every item \n from seeds to trees, \n from tools to decor \n from pots to pebbles!</string>
    <string name="add_address">+ Add Address</string>
    <string name="livlyf_support">LivLyf Support!</string>
    <string name="always_there_to_help">Always there to Help…</string>
    <string name="your_feedback_here">Your Feedback here…</string>
    <string name="submit">Submit</string>
    <string name="want_to_give_your_feedback">Want to Give your Feedback?</string>
    <string name="we_want_to_here_from_you">We want to here from you!</string>
</resources>