<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shopByCategory"
            android:icon="@drawable/ic_bag"
            android:title="@string/shop_by_category" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/myprofile" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_chat"
            android:title="@string/support" />

    </group>
</menu>