<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/OAF_txtReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/OAF_txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mmm_dd_yyyy_hh_mm"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landmark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/OAF_txtLandmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_code"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/OAF_txtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/OAF_txtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_mode"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>