<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_OrderID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_00000000000000"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordered_at"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_OrderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mmm_dd_yyyy_hh_mm"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_OrderAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_OrderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_OrderItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancelOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/red_400"
                android:elevation="5dp"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnOrderAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/colorWhite"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:elevation="5dp"
                android:text="@string/address"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>