<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/signup"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp"
        android:layout_marginEnd="25dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/SA_imgDP"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/add_profile"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SA_txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:maxLines="1"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:padding="4dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SA_txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:padding="4dp"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SA_txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/SA_btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_profile"
                    android:background="@drawable/btn_rounded"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/already_registered"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/SA_txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="22sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <ProgressBar
                    android:id="@+id/SA_progress"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimaryDark"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>



</RelativeLayout>